  * Remove dummy libmyth-perl package.
  * Modify ubuntu shutdown behavior patch to only use dbus if commands fail.
  * Update shutdown patch for upstream recommendations.
  * Conflicts/Replaces on old libmyth package (LP: #665402)
  * Merge mythtv/mythplugins/myththemes source packages into one.
  * Add a new get-svn-source rule to use with mythbuntu-weekly-build.

  [ Gerald Barker ]
  * Copy 'internetcontent' scripts to /usr/share/mythtv/ as part of
    mythbackend install so they can be requeted by MythNetvision

  [ Thomas Mashos ]
  * Added missingok for mirobridge log in logrotate (LP: #581283)
  * Updated perl bindings patch for upstream changes (LP: #586293)
  * Added libqt4-webkit-dev dependency to satisify maverick FTBFS
  * Added new python and perl dependencies
  * Moved backup and restore scripts from mythtv-database to mythtv-common
  * Added Replaces for mythtv-common (LP: 622983)

  [ John Baab ]
  * Fixed missing log folder for frontend only install (LP: #642992)

 -- John Baab <rhpot1991@ubuntu.com>  Thu, 28 Oct 2010 00:08:40 -0400

mythtv (0.23.1+fixes26437-0ubuntu1) maverick; urgency=low

  * New snapshot, 26437.
  * Drop qt47_support.patch, newer, bigger, better version upstream.
  * Drop configure_missing_check, iz now upstream too.
  * Refresh fuzzy patches.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Thu, 23 Sep 2010 22:53:26 -0500

mythtv (0.23.1+fixes26192-0ubuntu1) maverick; urgency=low

  * New snapshot, 26192.
    - Fixes channel scan crashes (LP: #632756)

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Thu, 09 Sep 2010 23:41:28 -0500

mythtv (0.23.1+fixes26057-0ubuntu1) maverick; urgency=low

  * New snapshot, 26057.
  * Simplify the upstart script.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Sat, 04 Sep 2010 20:39:54 -0500

mythtv (0.23.1+fixes25842-0ubuntu2) maverick; urgency=low

  * Rebuild without accidentally added patch 
    debian-changes-0.23.1+fixes25842-0ubuntu1.
