@@ -215,7 +215,7 @@ Architecture: any
 Section: libdevel
 Depends: libmyth-0.24-0 (= ${binary:Version}), ${misc:Depends}
 Provides: libmyth-0.24-0-dev
-Conflicts: libmyth-0.24-dev
+Conflicts: libmyth-0.24-0-dev
 Description: Common library code for MythTV and add-on modules (development)
  MythTV provides a unified graphical interface for recording and viewing
  television programs. Refer to the mythtv package for more information.
