@@ -197,7 +197,7 @@ Description: A personal video recorder application (client)
  For a complete installation of all MythTV components, install the 'mythtv'
  package.
 
-Package: libmyth-0.24-0
+Package: libmyth-#ABI#-0
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends}, libqt4-sql-mysql, ${misc:Depends}
@@ -213,9 +213,9 @@ Description: Common library code for MythTV and add-on modules (runtime)
 Package: libmyth-dev
 Architecture: any
 Section: libdevel
-Depends: libmyth-0.24-0 (= ${binary:Version}), ${misc:Depends}
-Provides: libmyth-0.24-0-dev
-Conflicts: libmyth-0.24-dev
+Depends: libmyth-#ABI#-0 (= ${binary:Version}), ${misc:Depends}
+Provides: libmyth-#ABI#-0-dev
+Conflicts: libmyth-#ABI#-0-dev
 Description: Common library code for MythTV and add-on modules (development)
  MythTV provides a unified graphical interface for recording and viewing
  television programs. Refer to the mythtv package for more information.
